--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="/css/estilos.css">
 </head>
 <body>
-    <h1 class="cabecera ">Cabecera</h1>
+    <h1 class="cabecera ">Tu blog maestro</h1>
     <h1>Aqui va el post</h1>
     <p>Párrafo de post</p>
+    <p>Suscribete y dale like</p>
 </body>
 </html>
