--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/estilos.css">
 </head>
 <body>
-    <h1 class="cabecera ">Blog de cabecera</h1>
+    <h1 class="cabecera ">Cabecera</h1>
     <h1>Aqui va el post</h1>
     <p>Párrafo de post</p>
     <p>Suscribete y dale like</p>
