--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,6 @@
     <h1 class="cabecera ">Cabecera te sigo cambiando otra vez, otra vez, otra vez, hola calvo</h1>
     <h1>Aqui va el post</h1>
     <p>Párrafo de post</p>
-    <p>Suscribete y dale like</p>
+    <p>Suscribete y dale like xd</p>
 </body>
 </html>
