--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="cabecera ">Cabecera te sigo cambiando otra vez, otra vez, otra vez, hola calvo</h1>
-    <h1>Aqui va el post</h1>
+    <h1>Aqui va el post, entre a fix typo</h1>
     <p>Párrafo de post</p>
     <p>Suscribete y dale like xd</p>
 </body>
