--- a/blogpost.html
+++ b/blogpost.html
@@ -12,5 +12,6 @@
     <h1>Aqui va el post, entre a fix typo</h1>
     <p>Párrafo de post</p>
     <p>Suscribete y dale like xd</p>
+    <a href="/index.html">Index</a>
 </body>
 </html>
