--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
-<p>Hola yo soy el index </p>
-
-<a href="/blogpost.html">blogpost</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog</title>
+    <link rel="stylesheet" href="/css/estilos.css">
+</head>
+<body>
+    <h1>Index</h1>
+    <h1 class="cabecera ">Cabecera te sigo cambiando otra vez, otra vez, otra vez, hola calvo</h1>
+    <h1>Aqui va el post, entre a fix typo</h1>
+    <p>Párrafo de post</p>
+    <p>Suscribete y dale like xd</p>
+    <a href="/blogpost.html">Index</a>
+</body>
+</html>
