--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
 </head>
 <body>
     <h1>Index</h1>
-    <h1 class="cabecera ">Cabecera te sigo cambiando otra vez, otra vez, otra vez, hola calvo</h1>
-    <h1>Aqui va el post, entre a fix typo</h1>
-    <p>Párrafo de post</p>
-    <p>Suscribete y dale like xd</p>
-    <a href="/blogpost.html">Index</a>
+    <a href="/blogpost.html">Blogpost</a>
 </body>
 </html>
