correción de rutas

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Index</h1>
-    <a href="/blogpost.html">Blogpost</a>
+    <a href="./blogpost.html">Blogpost</a>
 </body>
 </html>
