--- a/blogpost.html
+++ b/blogpost.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
     <h1 class="cabecera ">Cabecera te sigo cambiando otra vez, otra vez, otra vez, hola calvo</h1>
     <h1>Aqui va el post, entre a fix typo</h1>
     <p>Párrafo de post</p>
     <p>Suscribete y dale like xd</p>
-    <a href="/index.html">Index</a>
+    <a href="./index.html">Index</a>
 </body>
 </html>
